--- a/templates/carta.html
+++ b/templates/carta.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bar de picadas, cerveceria, bodegon porteño." />
     <meta name="keywords" content="picadas, cerveceria, bar, bodegon, esquina vernet" />
     <meta name="author" content="COMISION 23026 - GRUPO 1" />
