--- a/templates/plato_editar.html
+++ b/templates/plato_editar.html
@@ -2,162 +2,164 @@
 <html lang="es">
 
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Bar de picadas, cerveceria, bodegon porteño." />
-  <meta name="keywords" content="picadas, cerveceria, bar, bodegon, esquina vernet" />
-  <meta name="author" content="COMISION 23026 - GRUPO 1" />
-  <meta property="og:title" content="ESQUINA VERNET">
-  <meta property="og:description"
-      content="Bar de picadas, cerveceria, bodegon porteño. Lugar de encuentro y muy buena comida!!! " />
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gargolian.github.io/EsquinaVernet/">
-  <meta property="og:image" content="https://gargolian.github.io/EsquinaVernet/img/img_OGTEMP.jpg">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <link rel="stylesheet" href="../css/estilo.css">
-  <link rel="shortcut icon" type="image/x-icon" href="../favicon/android-chrome-192x192.png">
-  <script src="https://kit.fontawesome.com/488b0d20be.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <title>Esquina Vernet - Menu</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bar de picadas, cerveceria, bodegon porteño." />
+    <meta name="keywords" content="picadas, cerveceria, bar, bodegon, esquina vernet" />
+    <meta name="author" content="COMISION 23026 - GRUPO 1" />
+    <meta property="og:title" content="ESQUINA VERNET">
+    <meta property="og:description"
+        content="Bar de picadas, cerveceria, bodegon porteño. Lugar de encuentro y muy buena comida!!! " />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gargolian.github.io/EsquinaVernet/">
+    <meta property="og:image" content="https://gargolian.github.io/EsquinaVernet/img/img_OGTEMP.jpg">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon/android-chrome-192x192.png">
+    <script src="https://kit.fontawesome.com/488b0d20be.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>Esquina Vernet - Editar</title>
 </head>
 
 <body>
     <!--  ******************** ENCABEZADO Y BARRA DE NAVEGACION ********************  -->
-  <header class="header">
-      <div class="container">
-          <!-- ******Inicio BURGER MENU****** -->
-          <!-- ******Inicio lineas de burger menu****** -->
-          <div class="fixed">
-              <div class="header__burger burger">
-                  <span class="burger__line burger__line--first"></span>
-                  <span class="burger__line burger__line--second"></span>
-                  <span class="burger__line burger__line--third"></span>
-              </div>
-          </div>
-          <!-- ******Fin lineas de burger menu****** -->
-          <nav class="header__nav">
-              <ul id="header__list">
-                  <li class="header__item">
-                      <a class="header__link js-scroll" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="header__item">
-                      <a class="header__link js-scroll" href="../quienes.html">Quienes Somos</a>
-                  </li>
-                  <li class="header__item">
-                      <a class="header__link js-scroll" href="carta.html">Carta</a>
-                  </li>
-                  <li class="header__item">
-                      <a class="header__link js-scroll" href="../contacto.html">Contacto</a>
-                  </li>
-                  <li class="header__item">
-                      <!-- Falta agregar HTML o link para pedidos -->
-                      <a class="header__link js-scroll"
-                          href="https://www.pedidosya.com.ar/restaurantes/buenos-aires/esquina-vernet-delivery-menu?sem_tracker=14862314321&pycat=googlesearch&cmp=&ag=&kwd=&mt=&net=g&dev=c&sitelink=&gclid=Cj0KCQjwmtGjBhDhARIsAEqfDEc5qjMYBNLouVneheIdLEeI12izIVQi4GXkXUvDWMapaaFsBjXAf6EaAsyUEALw_wcB"
-                          target="_blank">Pedidos</a>
-                  </li>
-              </ul>
-              <div class="header__nav-close">
-                  <span class="header__nav-close-line"></span>
-                  <span class="header__nav-close-line"> <span>
-              </div>
-          </nav>
-          <!-- ******Fin BURGER MENU****** -->
-
-          <div class="header__top">
-              <h1 title="Esquina Vernet" class="header__title">Esquina Vernet</h1>
-              <!-- ******Inicio Barra de navegacion inline****** -->
-              <nav class="header_nav">
-                  <ul class="header_list">
-                      <li class="header_item">
-                          <a class="header_link js-scroll" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="header_item">
-                          <a class="header_link js-scroll" href="../quienes.html">Quienes Somos</a>
-                      </li>
-                      <li class="header_item">
-                          <a class="header_link js-scroll" href="carta.html">Carta</a>
-                      </li>
-                      <li class="header_item">
-                          <a class="header_link js-scroll" href="../contacto.html">Contacto</a>
-                      </li>
-                      <li class="header_item">
-                          <a class="header_link js-scroll"
-                              href="https://www.pedidosya.com.ar/restaurantes/buenos-aires/esquina-vernet-delivery-menu?sem_tracker=14862314321&pycat=googlesearch&cmp=&ag=&kwd=&mt=&net=g&dev=c&sitelink=&gclid=Cj0KCQjwmtGjBhDhARIsAEqfDEc5qjMYBNLouVneheIdLEeI12izIVQi4GXkXUvDWMapaaFsBjXAf6EaAsyUEALw_wcB"
-                              target="_blank">Pedidos</a>
-                      </li>
-                  </ul>
-              </nav>
-              <!-- ******Fin Barra de navegacion inline****** -->
-              <!-- ******Inicio Social Links****** -->
-              <nav class="social_links">
-                  <a title="Facebook" href="https://www.facebook.com/EsquinaVernet/?locale=es_LA" target="_blank">
-                      <i class="fa-brands fa-facebook"></i>
-                  </a>
-                  <a title="Instagram" href="https://www.instagram.com/esquinavernet/?hl=es" target="_blank"><i
-                          class="fa-brands fa-instagram"></i>
-                  </a>
-                  <a title="Email" href="contacto.html"><i class="fa-regular fa-envelope"></i>
-                  </a>
-              </nav>
-              <!-- ******Fin Social Links****** -->
-
-          </div>
-
-  </header>
-  <!-- ******************** FIN ENCABEZADO Y BARRA DE NAVEGACION ******************** -->
-  <main class="menu">
-    <div class="container" id="app">
-      <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
-        <h2>Modificacion de datos</h2>
-        <br></br>
-        <div class="mb-3">
-          <label for="nombre">Nombre: </label>
-          <input type="text" name="nombre" id="nombre" v-model="nombre">
-        </div>
-        <div class="mb-3">
-          <label for="precio">Precio: $ </label>
-          <input type="number" name="precio" id="precio" v-model="precio">
-        </div>
-        <div class="mb-3">
-          <label for="descrip">Descripcion: </label>
-          <input type="text" name="descrip" id="descrip" v-model="descrip">
-        </div>
-        <div class="mb-3">
-          <label for="imagen">Imagen:</label>
-          <input type="url" name="imagen" id="imagen" v-model="imagen">
-          <img width="100" :src="imagen" alt="">
-        </div>
-        <button type="button" class="btn btn-success" v-on:click="grabar()">Grabar</button>
-      </form>
-    </div>
-
-
-  </main>
-  <!-- ******************** FOOTER ******************** -->
-  <footer>
-    <div class="footer">
-        <div class="footer__container">
-            <div class="footer__author">
-                <p> &copy; Com. 23026 - Equipo Nro. 1 </p>
+    <header class="header">
+        <div class="container">
+            <!-- ******Inicio BURGER MENU****** -->
+            <!-- ******Inicio lineas de burger menu****** -->
+            <div class="fixed">
+                <div class="header__burger burger">
+                    <span class="burger__line burger__line--first"></span>
+                    <span class="burger__line burger__line--second"></span>
+                    <span class="burger__line burger__line--third"></span>
+                </div>
             </div>
-            <div class="footer__alero">
-                <img src="../img/F_alero_1.jpg" alt="">
+            <!-- ******Fin lineas de burger menu****** -->
+            <nav class="header__nav">
+                <ul id="header__list">
+                    <li class="header__item">
+                        <a class="header__link js-scroll" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="header__item">
+                        <a class="header__link js-scroll" href="../quienes.html">Quienes Somos</a>
+                    </li>
+                    <li class="header__item">
+                        <a class="header__link js-scroll" href="carta.html">Carta</a>
+                    </li>
+                    <li class="header__item">
+                        <a class="header__link js-scroll" href="../contacto.html">Contacto</a>
+                    </li>
+                    <li class="header__item">
+                        <!-- Falta agregar HTML o link para pedidos -->
+                        <a class="header__link js-scroll"
+                            href="https://www.pedidosya.com.ar/restaurantes/buenos-aires/esquina-vernet-delivery-menu?sem_tracker=14862314321&pycat=googlesearch&cmp=&ag=&kwd=&mt=&net=g&dev=c&sitelink=&gclid=Cj0KCQjwmtGjBhDhARIsAEqfDEc5qjMYBNLouVneheIdLEeI12izIVQi4GXkXUvDWMapaaFsBjXAf6EaAsyUEALw_wcB"
+                            target="_blank">Pedidos</a>
+                    </li>
+                </ul>
+                <div class="header__nav-close">
+                    <span class="header__nav-close-line"></span>
+                    <span class="header__nav-close-line"> <span>
+                </div>
+            </nav>
+            <!-- ******Fin BURGER MENU****** -->
+
+            <div class="header__top">
+                <h1 title="Esquina Vernet" class="header__title">Esquina Vernet</h1>
+                <!-- ******Inicio Barra de navegacion inline****** -->
+                <nav class="header_nav">
+                    <ul class="header_list">
+                        <li class="header_item">
+                            <a class="header_link js-scroll" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link js-scroll" href="../quienes.html">Quienes Somos</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link js-scroll" href="carta.html">Carta</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link js-scroll" href="../contacto.html">Contacto</a>
+                        </li>
+                        <li class="header_item">
+                            <a class="header_link js-scroll"
+                                href="https://www.pedidosya.com.ar/restaurantes/buenos-aires/esquina-vernet-delivery-menu?sem_tracker=14862314321&pycat=googlesearch&cmp=&ag=&kwd=&mt=&net=g&dev=c&sitelink=&gclid=Cj0KCQjwmtGjBhDhARIsAEqfDEc5qjMYBNLouVneheIdLEeI12izIVQi4GXkXUvDWMapaaFsBjXAf6EaAsyUEALw_wcB"
+                                target="_blank">Pedidos</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- ******Fin Barra de navegacion inline****** -->
+                <!-- ******Inicio Social Links****** -->
+                <nav class="social_links">
+                    <a title="Facebook" href="https://www.facebook.com/EsquinaVernet/?locale=es_LA" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a title="Instagram" href="https://www.instagram.com/esquinavernet/?hl=es" target="_blank"><i
+                            class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a title="Email" href="contacto.html"><i class="fa-regular fa-envelope"></i>
+                    </a>
+                </nav>
+                <!-- ******Fin Social Links****** -->
+
+            </div>
+
+    </header>
+    <!-- ******************** FIN ENCABEZADO Y BARRA DE NAVEGACION ******************** -->
+    <main class="menu">
+        <div class="container" id="app">
+            <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
+                <h2>Modificacion de datos</h2>
+                <br></br>
+                <div class="mb-3">
+                    <label for="nombre">Nombre: </label>
+                    <input type="text" name="nombre" id="nombre" v-model="nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="precio">Precio: $ </label>
+                    <input type="number" name="precio" id="precio" v-model="precio">
+                </div>
+                <div class="mb-3">
+                    <label for="descrip">Descripcion: </label>
+                    <input type="text" name="descrip" id="descrip" v-model="descrip">
+                </div>
+                <div class="mb-3">
+                    <label for="imagen">Imagen:</label>
+                    <input type="url" name="imagen" id="imagen" v-model="imagen">
+                    <img width="100" :src="imagen" alt="">
+                </div>
+                <button type="button" class="btn btn-success" v-on:click="grabar()">Grabar</button>
+            </form>
+        </div>
+
+
+    </main>
+    <!-- ******************** FOOTER ******************** -->
+    <footer>
+        <div class="footer">
+            <div class="footer__container">
+                <div class="footer__author">
+                    <p> &copy; Com. 23026 - Equipo Nro. 1 </p>
+                </div>
+                <div class="footer__alero">
+                    <img src="../img/F_alero_1.jpg" alt="">
+                </div>
             </div>
         </div>
-    </div>
-</footer>
-<!-- ******************** FIN FOOTER ******************** -->
-<script src="../JS/app.js"></script>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-    </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-    </script>
-  <script src="../JS/main.js"></script>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="../JS/platos_editar.js"></script>
+    </footer>
+    <!-- ******************** FIN FOOTER ******************** -->
+    <script src="../JS/app.js"></script>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+        </script>
+    <script src="../JS/main.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="../JS/platos_editar.js"></script>
 </body>
 
 </html>
